@@ -33,6 +33,8 @@ CONNECTEDNESS:
 
 INTEGERPTR:
 
+BOOLEANPTR:
+
 NULL:
     CALL:
     HEADER:
